--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,8 @@ dependencies:
 
   # Svg, image, video, ...
   flutter_svg: ^0.22.0
+  shimmer: ^2.0.0
+  cached_network_image: ^3.2.0
 
   # Local persistence
   shared_preferences: ^2.0.13
@@ -63,6 +65,7 @@ dependencies:
 
   # Others
   equatable: ^2.0.3
+  infinite_scroll_pagination: ^3.1.0
 
 
 
@@ -82,7 +85,6 @@ dev_dependencies:
 
   # Network Gen
   retrofit_generator: ^3.0.1
-  json_serializable: ^6.1.3
 
   # Generate images, fonts,...
   build_runner:
